--- a/6_schema_validation_final.ipynb
+++ b/6_schema_validation_final.ipynb
@@ -542,6 +542,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "4c98284c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/cheongray/iras_api_make_xml/combine_all_copy/iras_api_clean_1/AP_SP_files/AP_SP_FINAL_5.xlsx already there\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create AP_SP folder and move file into it\n",
+    "ap_sp_file = os.path.join(user_root,'AP_SP_FINAL_5.xlsx')\n",
+    "ap_sp_folder_file_path = os.path.join(root_path,'AP_SP_files')\n",
+    "os.makedirs(ap_sp_folder_file_path,exist_ok=True)\n",
+    "AP_SP_file_path_final = os.path.join(ap_sp_folder_file_path,'AP_SP_FINAL_5.xlsx')\n",
+    "if os.path.exists(ap_sp_folder_file_path):\n",
+    "    if os.path.exists(AP_SP_file_path_final):\n",
+    "        print(f'{AP_SP_file_path_final} already there')\n",
+    "    else:\n",
+    "        print(f'moving from {ap_sp_file} to {AP_SP_file_path_final} ')\n",
+    "        shutil.move(ap_sp_file,AP_SP_file_path_final)\n",
+    "    \n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "id": "ff4e3f6b",
    "metadata": {},
@@ -565,9 +596,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = r\"/Users/cheongray/iras_api_pytest_1/AP_SP_files/AP_SP_FINAL_5.xlsx\"#download to here from emails\n",
-    "\n",
-    "path_to_sample_xml_files_folder = r\"/Users/cheongray/iras_api_clean_1/sample_xml_files\"\n",
+    "file_path = AP_SP_file_path_final\n",
+    "path_to_sample_xml_files_folder = os.path.join(user_root,'sample_xml_files')\n",
+    "filepath_base_identifier = os.path.join(user_root,'instance_identifier.txt')\n",
     "\n",
     "sheet_name = '6_Schema Validation'\n",
     "df_s = pd.read_excel(file_path, sheet_name=sheet_name , keep_default_na=False, na_values=['NA'])\n",
@@ -19560,7 +19591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a20c6bf",
+   "id": "e35c5813",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -19568,7 +19599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fe07b9e",
+   "id": "902af991",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -19576,7 +19607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bce23b3",
+   "id": "441bddc9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -19584,7 +19615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e23e5ff4",
+   "id": "8af497e8",
    "metadata": {},
    "outputs": [],
    "source": []
